--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@angular/bazel",
-  "version": "5.0.0-rc.8-bb807501c",
+  "version": "5.1.0-beta.0-21bfaf226",
   "description": "Angular - bazel build rules",
   "author": "angular",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/compiler-cli": "5.0.0-rc.8-bb807501c",
+    "@angular/compiler-cli": "5.1.0-beta.0-21bfaf226",
     "typescript": ">=2.4.2 <2.5"
   },
   "dependencies": {
