--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/bazel",
-  "version": "6.1.0-rc.3-1a985725e1",
+  "version": "7.0.0-beta.4-51c0d9cae9",
   "description": "Angular - bazel build rules",
   "author": "angular",
   "license": "MIT",
@@ -10,8 +10,8 @@
     "protobufjs": "5.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "6.1.0-rc.3-1a985725e1",
-    "typescript": ">=2.7.2 <2.10"
+    "@angular/compiler-cli": "7.0.0-beta.4-51c0d9cae9",
+    "typescript": ">=3.0.1 <3.1"
   },
   "repository": {
     "type": "git",
