--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@angular/bazel",
-  "version": "5.1.0-beta.0-21bfaf226",
+  "version": "7.0.0-beta.4-a2418a9037",
   "description": "Angular - bazel build rules",
   "author": "angular",
   "license": "MIT",
-  "peerDependencies": {
-    "@angular/compiler-cli": "5.1.0-beta.0-21bfaf226",
-    "typescript": ">=2.4.2 <2.5"
-  },
   "dependencies": {
-    "@bazel/typescript": "0.2.x",
-    "@types/node": "6.0.84"
+    "@bazel/typescript": "^0.15.0",
+    "@types/node": "6.0.84",
+    "protobufjs": "5.0.0"
+  },
+  "peerDependencies": {
+    "@angular/compiler-cli": "7.0.0-beta.4-a2418a9037",
+    "typescript": ">=3.0.1 <3.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/angular/angular.git"
+  },
+  "ng-update": {
+    "packageGroup": "NG_UPDATE_PACKAGE_GROUP"
   }
 }
