--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/bazel",
-  "version": "7.0.0-beta.4-a2418a9037",
+  "version": "7.0.0-rc.1-1c561a833c",
   "description": "Angular - bazel build rules",
   "author": "angular",
   "license": "MIT",
@@ -10,8 +10,8 @@
     "protobufjs": "5.0.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "7.0.0-beta.4-a2418a9037",
-    "typescript": ">=3.0.1 <3.1"
+    "@angular/compiler-cli": "7.0.0-rc.1-1c561a833c",
+    "typescript": ">=3.1.1 <3.2"
   },
   "repository": {
     "type": "git",
